# sensor-dashboard

./: .gitignore  environment.yml  pyproject.toml  sensor-dash.py  sensor-dashboard.py  sensor-dashboard.service  sensor_data.db
data/: sensor_data.db
sensor_dashboard/: __main__.py  async_main.py  connection.py  figure_playground.py  main.py  run_app.py  soil_moisture.py  util.py  weather_station_app.py
sensor_dashboard/DOCS/: configuration.md
sensor_dashboard/atmospheric/: __init__.py  __main__.py  atmospheric.py
sensor_dashboard/connection/: __init__.py  connection.py  scratch_connection.py
sensor_dashboard/munge_and_plot/: IndividualMeasurementPlots.py  WindPolarPlot.py  __init__.py  munge_and_plot.py  plots.py
sensor_dashboard/tests/: test_connection.py  test_munge_and_plot.py  test_wind.py
sensor_dashboard/tests/data/: sensor_data.db
