[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor_dashboard"
authors = [
    {name = "Keegan Evans", email = "keegan.evans@gmail.com"},
]
description = "A dashboard for displaying weather station sensor data"
license = {text = "BSD-3-Clause"}
version = "0.0.1"
dependencies = [
    "mqtt-data-logger @ git+https://github.com/4cscc/mqtt-data-logger.git@main",
    "sqlalchemy",
    "dash",
    "plotly",
    "pandas == 1.5.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sensor_dashboard*"]
exclude = ["tests*"]

# [tool.setuptools.package-data]
# sensor_dashboard.tests.data = ["*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
run_sensor_dashboard = "sensor_dashboard.__main__:main"